--- a/app/views/chats/chat_members/_add_member_form.slim
+++ b/app/views/chats/chat_members/_add_member_form.slim
@@ -1,4 +1,4 @@
-= render 'chats/members_list', squad_members: @squad_members
+= render 'chats/chat_members/list', squad_members: @squad_members
 
 .my-3
   = form_for Chat.new do |f|
