--- a/app/webpack/stylesheets/chats/index.scss
+++ b/app/webpack/stylesheets/chats/index.scss
@@ -17,7 +17,7 @@
     .chat-element {
       padding: 16px 0 0 0;
       display: flex;
-      cursor: pointer;
+      text-decoration: none;
       
       .photo {
         display: flex;
