--- a/app/views/chats/chat_members/_add_member_form.slim
+++ b/app/views/chats/chat_members/_add_member_form.slim
@@ -1,6 +1,11 @@
 = render 'chats/chat_members/list', squad_members: @squad_members
 
 .my-3
-  = form_for Chat.new do |f|
-    = hidden_field_tag "chat_membership[usernames][]", []
-    = f.submit 'Create', class: 'btn btn-primary w-100'
+  - if @chat.new_record?
+    = form_for @chat do |f|
+      = hidden_field_tag "chat_membership[usernames][]", []
+      = f.submit 'Create', class: 'btn btn-primary w-100'
+  - else
+    = form_for @chat, url: update_members_chat_path(@chat.access_token), remote: true, authenticity_token: true, html: { method: :put } do |f|
+      = hidden_field_tag "chat_membership[usernames][]", []
+      = f.submit 'Update', class: 'btn btn-primary w-100'
