--- a/app/views/chats/chat_members/_list.slim
+++ b/app/views/chats/chat_members/_list.slim
@@ -12,5 +12,10 @@
           = user.full_name
         .member-is-checked
           label class="big-checkbox-lable"
-            input type="checkbox" id="checkbox-member-#{user.username}" data-username="#{user.username}"
+            - if !@chat.new_record? && @chat.chat_memberships.exists?(user_id: user.id)
+              input type="checkbox" id="checkbox-member-#{user.username}" data-username="#{user.username}" checked='true'
+            
+            - else
+              input type="checkbox" id="checkbox-member-#{user.username}" data-username="#{user.username}"
+              
             .checkmark
