--- a/app/views/chats/show.js.erb
+++ b/app/views/chats/show.js.erb
@@ -1,1 +1,16 @@
 $('#chat-board-placeholder').html("<%= j render partial: 'chats/chat_board/new_board' %>")
+
+// The current script should be placed here. It's called every time when partial is reload
+// On Chat update
+$('#modal-add-chat-member').on('submit', '[id^=edit_chat]', function(e) {
+  let checkedMembers = $("[id^=checkbox-member-]:checked")
+  if (checkedMembers.length > 0) {
+    $("#chat_membership_usernames_").remove()
+    checkedMembers.each(function() {
+      let username = $(this).attr("data-username")
+      $(e.target).append(`<input type="hidden" name="chat_membership[usernames][]" id="chat_membership_usernames_" value=${username}>`)
+    })
+  }
+  
+  $('#modal-add-chat-member').modal('hide')
+})
