--- a/app/webpack/stylesheets/chats/members_list.scss
+++ b/app/webpack/stylesheets/chats/members_list.scss
@@ -36,6 +36,10 @@
       .member-is-checked {
         height: 18px; // equal to checkbox height
       }
+      
+      .member-role-select {
+        
+      }
     }
   }
 }
