Set correct name for ChatMembersController

--- a/app/views/chat_memberships/index_roles.js.erb
+++ b/app/views/chat_memberships/index_roles.js.erb
@@ -3,11 +3,10 @@ $('#chat-members-roles-placeholder').html("<%= j render partial: 'chats/chat_mem
 
 // Change ChatMember role
 $('#modal-chat-members-roles').on('change', '[id$=_role]', function() {
-  console.log($(this));
   let role = $(this).val();
   let chatMembershipId = $(this).attr('id').split('_')[0]
   $.ajax({
-      url: window.location.origin + '/chat_members/' + chatMembershipId,
+      url: window.location.origin + '/chat_memberships/' + chatMembershipId,
       type: 'PUT',
       data: { chat_membership: { role: role }},
       dataType: 'json'
