--- a/app/views/chats/chat_board/_new_board.slim
+++ b/app/views/chats/chat_board/_new_board.slim
@@ -18,10 +18,10 @@
       a.dropdown-toggle#dropdown-chat-more-button data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
         = image_pack_tag('media/images/icons/ic_chat_more.png')
       .dropdown-menu.dropdown-menu-right aria-labelledby="#dropdown-chat-more-button"
-        = link_to chat_chat_members_path(@chat.access_token), class: 'dropdown-item', remote: true do
+        = link_to chat_chat_memberships_path(@chat.access_token), class: 'dropdown-item', remote: true do
           = image_pack_tag('media/images/icons/ic_chat_add_member.png')
           span Add member
-        = link_to chat_chat_members_path(@chat.access_token, response_type: 'roles'), class: 'dropdown-item', remote: true do
+        = link_to chat_chat_memberships_path(@chat.access_token, response_type: 'roles'), class: 'dropdown-item', remote: true do
           = image_pack_tag('media/images/icons/ic_chat_members.png')
           span Members
         = link_to '', class: 'dropdown-item' do
