--- a/app/views/chats/show.js.erb
+++ b/app/views/chats/show.js.erb
@@ -12,7 +12,5 @@ $('#modal-add-chat-member').on('submit', '[id^=edit_chat]', function(e) {
     })
   }
   
-  $('#modal-chat-members-roles').on('change', '[id$=_role]', function() {
-    console.log($(this).val());
-  })
+  $('#modal-add-chat-member').modal('hide')
 })
