Add ChatMembership can be done only by ChatOwner or ChatAdmin

--- a/app/views/chats/chat_members/_change_member_role.slim
+++ b/app/views/chats/chat_members/_change_member_role.slim
@@ -10,5 +10,7 @@
       .content
         .member-name
           = chat_membership.user.full_name
-        .member-role-select
-          = select chat_membership.id, :role, options_for_select(['owner', 'admin', 'user'], chat_membership.role), {}, { class: 'form-control chat-select' }
+          
+        - if @chat.owner == current_user
+          .member-role-select
+            = select chat_membership.id, :role, options_for_select(['owner', 'admin', 'user'], chat_membership.role), {}, { class: 'form-control chat-select' }
