Add Chat edit modal

--- a/app/views/chats/chats_list/_chat_object.slim
+++ b/app/views/chats/chats_list/_chat_object.slim
@@ -1,6 +1,8 @@
 = link_to chat_path(chat.access_token), class: 'chat-element', remote: true do
   .photo
-    - if chat.owner&.profile_picture&.url
+    - if chat.icon&.url
+      = image_tag(chat.icon&.rectangle_150_150.url, class: 'profile-image')
+    - elsif chat.owner&.profile_picture&.url
       = image_tag(chat.owner.profile_picture.square_320.url, class: 'profile-image')
     - else
       = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
