--- a/app/webpack/stylesheets/chats/index.scss
+++ b/app/webpack/stylesheets/chats/index.scss
@@ -1,5 +1,6 @@
 @import './members_list';
-@import './control-panel';
+@import './control_panel';
+@import './icon_uploader';
 
 .chat-wrapper {
   position: relative;
