--- a/app/views/chats/chat_board/_new_board.slim
+++ b/app/views/chats/chat_board/_new_board.slim
@@ -1,7 +1,9 @@
 .chat-info
   .main-info
     .photo
-      - if @chat.owner&.profile_picture&.url
+      - if @chat.icon&.url
+        = image_tag(@chat.icon&.rectangle_150_150.url, class: 'profile-image')
+      - elsif @chat.owner&.profile_picture&.url
         = image_tag(@chat.owner.profile_picture.square_320.url, class: 'profile-image')
       - else
         = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
@@ -26,7 +28,7 @@
           = image_pack_tag('media/images/icons/ic_chat_members.png')
           span Members
         - if @chat.admins.include?(current_user) || @chat.owner == current_user
-          = link_to '', class: 'dropdown-item' do
+          = link_to edit_chat_path(@chat.access_token), class: 'dropdown-item', remote: true do
             = image_pack_tag('media/images/icons/ic_chat_change_group.png')
             span Change group
           = link_to '', class: 'dropdown-item' do
@@ -53,3 +55,4 @@
   
 = render 'chats/chat_modals/add_chat_member'
 = render 'chats/chat_modals/chat_members_roles'
+= render 'chats/chat_modals/edit_chat'
