Add extra styles for Chat

--- a/app/views/chats/chat_board/_new_board.slim
+++ b/app/views/chats/chat_board/_new_board.slim
@@ -9,7 +9,7 @@
         = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
         
     .title
-      span #{@chat.name}
+      = @chat.name
       
   .control-info
     .control-element
