--- a/app/views/chats/chat_members/_list.slim
+++ b/app/views/chats/chat_members/_list.slim
@@ -2,10 +2,11 @@
   - squad_members.each do |user|
     .chat-member-card
       .photo
-        - if user.profile_picture&.url
-          = image_tag(user.profile_picture.square_320.url, class: 'profile-image')
-        - else
-          = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
+        = link_to user_path(user.username), target: :_blank, data: { type: 'modal-link' } do
+          - if user.profile_picture&.url
+            = image_tag(user.profile_picture.square_320.url, class: 'profile-image')
+          - else
+            = image_pack_tag('media/images/placeholders/placeholder-user-profile.png', class: 'profile-image')
           
       .content
         .member-name
