Update Chat modal for empty ChatMembers case

--- a/app/webpack/stylesheets/chats/members_list.scss
+++ b/app/webpack/stylesheets/chats/members_list.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 50vh;
   overflow: scroll;
+  &.no-members { height: auto }
   
   .chat-member-card {
     display: flex;
