--- a/app/webpack/stylesheets/chats/members_list.scss
+++ b/app/webpack/stylesheets/chats/members_list.scss
@@ -38,10 +38,12 @@
       }
       
       .member-role-select {
-        width: 80px;
+        width: 70px;
         text-align: center;
         text-align-last: center;
         -moz-text-align-last: center;
+        text-align:-moz-center;
+        text-align:-webkit-center;
       }
     }
   }
