Update text for Post#show

--- a/app/views/posts/_show.slim
+++ b/app/views/posts/_show.slim
@@ -47,7 +47,7 @@
             = f.check_box :is_notification
             span.slider.default.round
             
-          span.ml-2 Pause Notification
+          span.ml-2 Notifications
         
   .post-text
     .post-title
