--- a/app/views/chats/edit.js.erb
+++ b/app/views/chats/edit.js.erb
@@ -1,5 +1,5 @@
 $('#modal-edit-chat').modal('show')
-$('#edit-chat-placeholder').html("<%= j render partial: 'chats/chat_board/form.slim' %>")
+$('#edit-chat-placeholder').html("<%= j render partial: 'chats/chat_board/edit_form.slim' %>")
 
 // Edit icon
 $('#modal-edit-chat').on('click', '#edit-icon-mask', function() {
