--- a/app/views/chat_messages/_index.slim
+++ b/app/views/chat_messages/_index.slim
@@ -1,1 +1,3 @@
-.chat-message-board
+.chat-message-board#chat-message-placeholder
+  - @chat_messages.each do |chat_message|
+    = render 'chat_messages/message', chat_message: chat_message
