--- a/app/views/chats/chats_list/_chat_object.slim
+++ b/app/views/chats/chats_list/_chat_object.slim
@@ -1,4 +1,4 @@
-= link_to chat_path(chat.access_token), class: 'chat-element', remote: true do
+= link_to chat_path(chat.access_token), class: 'chat-element', remote: true, id: "chat-element-#{chat.access_token}" do
   .photo
     - if chat.icon&.url
       = image_tag(chat.icon&.rectangle_150_150.url, class: 'profile-image')
