Add ChatAssets modal to Web

--- a/app/views/chat_messages/_new.slim
+++ b/app/views/chat_messages/_new.slim
@@ -4,7 +4,7 @@
     .input-group
       .input-group-prepend
         .input-group-text
-          = image_pack_tag('media/images/icons/ic_chat_document.png', class: 'img-responsive')
+          = image_pack_tag('media/images/icons/ic_chat_document.png', class: 'img-responsive', id: 'chat-assset-button')
           
       = f.text_field :text, class: 'form-control', placeholder: 'Write a message', autocomplete: false
       
