--- a/app/views/chats/chat_board/_new_board.slim
+++ b/app/views/chats/chat_board/_new_board.slim
@@ -39,9 +39,14 @@
           = image_pack_tag('media/images/icons/ic_chat_leave_group.png')
           span Leave group
       
+// Chat Messages
 = render 'chat_messages/index'
 = render 'chat_messages/new'
+
+// Chat Message Modals
+= render 'chat_messages/assets/chat_assets_modal'
   
+// Chat Modals
 = render 'chats/chat_modals/add_chat_member'
 = render 'chats/chat_modals/chat_members_roles'
 = render 'chats/chat_modals/edit_chat'
