Add image type to ChatMessages

--- a/app/views/chat_messages/_message.slim
+++ b/app/views/chat_messages/_message.slim
@@ -1,1 +1,6 @@
-p #{chat_message.text}
+- case chat_message.message_type
+- when 'text'
+  p #{chat_message.text}
+- when 'image'
+  p
+    = image_tag(chat_message.image.url)
