Save Audio record to ChatMessage after Stop action

--- a/app/views/chats/chat_board/_new_board.slim
+++ b/app/views/chats/chat_board/_new_board.slim
@@ -45,6 +45,7 @@
 
 // Chat Message Modals
 = render 'chat_messages/assets/chat_assets_modal'
+= render 'chats/chat_board/recorder'
   
 // Chat Modals
 = render 'chats/chat_modals/add_chat_member'
