--- a/app/views/events/_events.slim
+++ b/app/views/events/_events.slim
@@ -19,7 +19,7 @@
           .time
             = image_pack_tag 'media/images/icons/ic_clock.png'
             
-            span #{hours_seconds(event.start_date)} - #{hours_seconds(event.end_date)}
+            span #{hours_minutes(event.start_date)} - #{hours_minutes(event.end_date)}
   
 #container-floating-wrapper
   #container-floating
