--- a/app/views/chats/chat_board/_new_board.slim
+++ b/app/views/chats/chat_board/_new_board.slim
@@ -1,4 +1,4 @@
-#chat-board data-chat-token="#{@chat.access_token}"
+#chat-board data-chat-token="#{@chat.access_token}" data-chat-username="#{current_user.username}"
 .chat-info
   .main-info
     .photo
