Replace ChatMessage placeholder with real data

--- a/app/views/chats/chats_list/_chat_object.slim
+++ b/app/views/chats/chats_list/_chat_object.slim
@@ -17,4 +17,4 @@
       .message
         //.icon
         .text
-          span Test message go go go go go go go !!! !!! Test message go go go go go go go !!! !!!
+          span #{last_message_text(chat.chat_messages.last)}
