Add unread messages view for ChatMembership

--- a/app/views/chats/chats_list/_chat_object.slim
+++ b/app/views/chats/chats_list/_chat_object.slim
@@ -18,3 +18,9 @@
         //.icon
         .text
           span #{last_message_text(chat.chat_messages.last)}
+          
+        .unread_messages_count
+          - if is_message_counter
+            span #{chat.get_membership(current_user).unread_messages_count}
+          - else
+            span 0
