--- a/app/views/chats/chats_list/_index.slim
+++ b/app/views/chats/chats_list/_index.slim
@@ -1,2 +1,2 @@
 - @chats.each do |chat|
-  = render 'chats/chats_list/chat_object', chat: chat
+  = render 'chats/chats_list/chat_object', chat: chat, is_message_counter: true
