--- a/app/webpack/stylesheets/posts/form.scss
+++ b/app/webpack/stylesheets/posts/form.scss
@@ -3,6 +3,7 @@
 .post-form-image-mask {
   width: 100%;
   height: 522px;
+  overflow: hidden;
   position: relative;
   cursor: pointer;
   border: 1px solid $color-light-grey;
@@ -17,11 +18,16 @@
 }
 
 .post-photo-image {
-  height: 522px;
-  border-radius: 8px;
-  position: absolute;
+  vertical-align: middle;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  position: relative;
   top: 50%;
   transform: translateY(-50%);
-  width: 100%;
   display: none;
+}
+
+@media (max-width: map-get($grid-breakpoints, "lg")) {
+  .post-form-image-mask { height: 40vh; }
 }
