--- a/app/webpack/stylesheets/home/news.scss
+++ b/app/webpack/stylesheets/home/news.scss
@@ -35,6 +35,16 @@
   object-fit: cover;
   text-align: center;
   overflow: hidden;
+}
+
+.news-cards-wrapper .news-image-wrapper:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 
