--- a/app/webpack/stylesheets/posts/index.scss
+++ b/app/webpack/stylesheets/posts/index.scss
@@ -63,11 +63,22 @@
   text-align: center;
   overflow: hidden;
   border-radius: 4px;
+}
+
+.posts-cards-wrapper .posts-image-wrapper:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 
 .posts-cards-wrapper .posts-image-wrapper .post-title-panel {
   position: absolute;
+  z-index: 1;
   bottom: 48px;
   right: 0;
   left: 0;
