--- a/app/views/groups/_search_form.slim
+++ b/app/views/groups/_search_form.slim
@@ -1,6 +1,6 @@
 form.search-wrapper
   .material-field
-    input id="group-search-input" type="text" placeholder="What do you whant to find?" class='form-control' autocomplete='off'
+    input id="group-search-input" type="text" placeholder="What do you want to find?" class='form-control' autocomplete='off'
   
   .search-results-wrapper
     #group-search-list
