--- a/app/views/posts/_form.slim
+++ b/app/views/posts/_form.slim
@@ -1,3 +1,4 @@
+= render 'groups/post_groups', groups: @groups
 = render 'posts/user_images', user_images: @user_images
 = render 'groups/search', groups: @groups_for_search, search_id: 'modal-post-group-search'
 .d-width-wrapper
