--- a/app/views/groups/tree_board/_add_topic.slim
+++ b/app/views/groups/tree_board/_add_topic.slim
@@ -1,6 +1,6 @@
 ul
   li.group-wrapper
-    .main-content
+    .main-content.new-topic-link
       .title-wrapper
         = image_pack_tag 'media/images/icons/ic_clock.png', class: 'main'
         
