--- a/app/views/topics/_form.slim
+++ b/app/views/topics/_form.slim
@@ -4,6 +4,8 @@
   h6 Add new topic to:
   h5 = topic_full_title(@topic.parent)
     
+  // On Create Redirect to groups or posts
+  = hidden_field_tag :redirect_path, params[:redirect_path]
   = f.hidden_field :parent_id, value:  @topic.parent_id
   = f.hidden_field :parent_type, value:  @topic.parent_type
   
