--- a/app/webpack/stylesheets/active_admin.scss
+++ b/app/webpack/stylesheets/active_admin.scss
@@ -15,3 +15,8 @@
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+
+.admin-index-image {
+  width: 100px;
+  height: auto;
+}
