--- a/app/webpack/stylesheets/icons.scss
+++ b/app/webpack/stylesheets/icons.scss
@@ -10,6 +10,8 @@
   padding: 0 16px;
   z-index: 1;
   
+  &.on-approve { display: none; }
+  
   .info-panel-value-wrapper {
     cursor: pointer;
     display: inline-flex;
