Fix link for Post that not approved

--- a/app/views/posts/index.slim
+++ b/app/views/posts/index.slim
@@ -23,7 +23,10 @@
             = image_pack_tag('media/images/placeholders/placeholder-news.png', class: 'post-image')
           
           .post-title-panel
-            = link_to post.title, post_post_comments_path(post)
+            - if !post.is_approved
+              a #{post.title}
+            - else
+              = link_to post.title, post_post_comments_path(post)
           
           . class="#{post.is_approved ? 'post-info-panel' : 'post-info-panel on-approve'}"
             .div class="info-panel-value-wrapper"
